# energotestchallange

./: CMakeLists.txt  README.md
doc/: documentation.md
include/Communication/ApplicationProtocol/: FrameHeader.h
include/Communication/Client/: IHandshake.h  IProtocolExecutor.h
include/Communication/Client/TransportConnectivityManager/: ITransportConnection.h  ITransportConnectivityManager.h
include/Communication/Server/: IHandshake.h  IProtocolExecutor.h
include/Communication/Server/TransportConnectivityManager/: ITransportConnection.h  ITransportConnectivityManager.h
include/Configuration/: Defines.h
include/Event/: EventData.h
include/EventsStorage/: IEventsStorage.h
include/Lib/C++Tools/: ScopedAction.h
include/Lib/Log/: Logger.h
include/Lib/PacketCoderV1/: BytesStream.h  PacketDecoder.h  PacketFactory.h  Packets.h
include/Lib/QtTcpConnectionHelper/: QtTcpConnectionHelper.h
include/Lib/TableEventsModel/: TableEventsModel.h
include/Lib/TestUtils/: CallbackCatcher.h
include/Lib/Uint64/: BytsOrderUint64.h
src/: CMakeLists.txt
src/Application/: CMakeLists.txt  Main.cpp  MainWindow.cpp  MainWindow.h
src/Application/uic/: MainWindow.ui
src/Communication/: CMakeLists.txt
src/Communication/Client/: CMakeLists.txt
src/Communication/Client/Handshake/: CMakeLists.txt
src/Communication/Client/Handshake/HandshakeV1/: CMakeLists.txt  HandshakeV1.cpp  HandshakeV1.h
src/Communication/Client/ProtocolExecutor/ProtocolExecutorV1/: CMakeLists.txt  ProtocolExecutorV1.cpp  ProtocolExecutorV1.h  ServerMessagesContainer.cpp  ServerMessagesContainer.h
src/Communication/Client/TransportConnectivityManager/TcpTransportConnection/: CMakeLists.txt  TcpConnection.cpp  TcpConnection.h
src/Communication/Client/TransportConnectivityManager/TcpTransportConnectivityManager/: CMakeLists.txt  TcpConnectivityManager.cpp  TcpConnectivityManager.h
src/Communication/Server/: CMakeLists.txt
src/Communication/Server/Handshake/HandshakeV1/: CMakeLists.txt  HandshakeV1.cpp  HandshakeV1.h
src/Communication/Server/ProtocolExecutor/ProtocolExecutorV1/: CMakeLists.txt  ProtocolExecutorV1.cpp  ProtocolExecutorV1.h
src/Communication/Server/TransportConnectivityManager/: CMakeLists.txt
src/Communication/Server/TransportConnectivityManager/TcpTransportConnection/: CMakeLists.txt  TcpConnection.cpp  TcpConnection.h
src/Communication/Server/TransportConnectivityManager/TcpTransportConnectivityManager/: CMakeLists.txt  TcpTransportConnectivityManager.cpp  TcpTransportConnectivityManager.h
src/EventsStorage/: CMakeLists.txt
src/EventsStorage/SqliteStorage/: CMakeLists.txt  SqliteStorage.cpp  SqliteStorage.h
src/Lib/PacketCoderV1/: BytesStream.cpp  CMakeLists.txt  PacketDecoder.cpp  PacketFactory.cpp
src/Lib/QtTcpConnectionHelper/: CMakeLists.txt  TcpConnection.cpp
src/Lib/TableEventsModel/: CMakeLists.txt  TableEventsModel.cpp
src/Server/: CMakeLists.txt  Main.cpp  Server.cpp  Server.h
src/Server/systemd/: ChallengeServer.service
test/: CMakeLists.txt
test/Communication/: CMakeLists.txt
test/Communication/Client/Handshake/HandshakeV1/: CMakeLists.txt  TestCases.cpp
test/Communication/Client/ProtocolExecutor/ProtocolExecutorV1/: CMakeLists.txt  TestCases.cpp
test/Communication/Client/TransportConnectivityManager/TcpTransportConnection/: CMakeLists.txt  TestCases.cpp
test/Communication/Client/TransportConnectivityManager/TcpTransportConnectivityManager/: CMakeLists.txt  TestCases.cpp
test/Communication/Server/Handshake/: CMakeLists.txt
test/Communication/Server/Handshake/HandshakeV1/: CMakeLists.txt  TestCases.cpp
test/Communication/Server/ProtocolExecutor/: CMakeLists.txt
test/Communication/Server/ProtocolExecutor/ProtocolExecutorV1/: CMakeLists.txt  Main.cpp  TestCases.cpp
test/Communication/Server/TransportConnectivityManager/: CMakeLists.txt
test/Communication/Server/TransportConnectivityManager/TcpTransportConnection/: CMakeLists.txt  TestCases.cpp
test/Communication/Server/TransportConnectivityManager/TcpTransportConnectivityManager/: CMakeLists.txt  TestCases.cpp
test/EventsStorage/: CMakeLists.txt
test/EventsStorage/SqliteStorage/: CMakeLists.txt  TestCases.cpp
test/Lib/: CMakeLists.txt
test/Lib/PacketCoderV1/: CMakeLists.txt  TestCases.cpp
test/Lib/QtTcpConnectionHelper/: CMakeLists.txt  TestCases.cpp
test/Lib/TableEventsModel/: CMakeLists.txt  TestCases.cpp
test/Mock/Mock/Communication/Client/: IAppProtocol.h  IHandshake.h  ITransportConnection.h  ITransportConnectivityManager.h
test/Mock/Mock/Communication/Server/: IHandshake.h  ITransportConnection.h  ITransportConnectivityManager.h
test/Mock/Mock/EventsStorage/: IEventsStorage.h
